<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AccountEditorActivity">

    <EditText
        android:id="@+id/ac_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/ac_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="5"
        android:hint="@string/amount"
        android:inputType="numberSigned" />


    <Button
        android:id="@+id/ac_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/add_or_edit" />

    <Button
        android:id="@+id/ac_del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/del"
        android:visibility="gone" />

    <Button
        android:id="@+id/remainder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setRemainder"
        android:layout_marginTop="10dp"
        android:text="@string/set_remainder" />
</LinearLayout>