<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:gravity="center_vertical"
    android:paddingBottom="3dp">

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:singleLine="true"
        android:paddingVertical="10dp"
        android:text="@string/category" />

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/account" />

        <TextView
            android:id="@+id/note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="sfsdlk sdfsdfs sdfs df sdf "
            android:visibility="gone"
            android:textColor="?android:attr/textColorPrimary" />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/_500" />
</TableRow>