<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?cardBackgroundColor">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/col1"
            style="@style/IncomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income_f"
            android:textAlignment="center"
            android:textColor="@color/blue" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/col2"
            style="@style/ExpenseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_f"
            android:textAlignment="center"
            android:textColor="@color/orange" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/col3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_f"
            android:textAlignment="center" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="?attr/boxStrokeColor" />

</TableLayout>